<resources>
    <string name="app_name">FeelingsDiary</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_title_name">Enter title name</string>
    <string name="enter_author_name">Enter author\'s name</string>
    <string name="add_titles">Add Titles</string>
    <string name="register_new_account">Register new account</string>
    <string name="tap_to_view">Tap on an Author to add and view titles</string>
    <string name="one">1</string>
    <string name="add">Add</string>
    <string name="authors">Authors</string>
    <string name="account_login">Account Login</string>
    <string name="delete">Delete</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="titles">Titles</string>
    <string name="update">Update</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthdate">Birthday</string>
    <string name="action_home">Home</string>
    <string name="action_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="action_calendar">Calendar</string>
    <string name="action_diary">Diary</string>
    <string name="upload">Upload</string>
    <string name="add_entry">Add Entry</string>
    <string name="view_entries">View Entries</string>
    <string name="logout">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>