<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AC95D6"
    android:clickable="true">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="#D7C9F3"
        app:menu="@menu/my_navigation_items" />

    <ImageView
        android:id="@+id/profile_pic_imageView"
        android:layout_width="match_parent"
        android:layout_height="187dp"
        android:foreground="@drawable/rounded_fg"
        android:gravity="center_vertical"
        android:src="@drawable/ic_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="417dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/action_profile"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:textSize="35sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <ImageView
                android:id="@+id/imageViewName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="1dp"
                app:srcCompat="@drawable/ic_profile" />

            <TextView
                android:id="@+id/profile_first_name"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:text="@string/first_name"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonEditFirstName"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="43dp"
                android:layout_height="38dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_toRightOf="@+id/profile_name_textView"
                android:background="@drawable/ic_edit"
                android:onClick="EditFirstName" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <ImageView
                android:id="@+id/imageViewSurname"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="1dp"
                app:srcCompat="@drawable/ic_profile" />

            <TextView
                android:id="@+id/profile_last_name"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:text="@string/last_name"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonEditLastName"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_toRightOf="@+id/profile_name_textView"
                android:background="@drawable/ic_edit"
                android:onClick="EditLastName" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <ImageView
                android:id="@+id/imageViewPhone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="1dp"
                app:srcCompat="@drawable/ic_cal" />

            <TextView
                android:id="@+id/profile_bday"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:text="@string/birthdate"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <Button
                android:id="@+id/buttonEditBday"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_toRightOf="@+id/profile_name_textView"
                android:background="@drawable/ic_edit"
                android:onClick="EditBday" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <ImageView
                android:id="@+id/imageViewMail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="1dp"
                app:srcCompat="@drawable/ic_email" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:text="@string/email"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />
        </TableRow>

        <TextView
            android:id="@+id/btn_log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="LogOut"
            android:text="@string/logout"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>